name:                social-example
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Schröder
maintainer:          mc.schroeder@gmail.com
copyright:           (c) Michael Schröder 2014
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: js/*
                  , social0/client.html
                  , social1/client.html
                  , social2/client.html

executable social0
  hs-source-dirs: social0
  main-is: Server.hs
  other-modules: SocialDB
  build-depends: base >=4.7
               , aeson >=0.8
               , cereal >=0.4
               , containers >=0.5
               , bytestring >=0.10
               , hashable >= 1.2
               , http-types >=0.8
               , old-locale >=1.0
               , random >=1.1
               , safecopy >=0.8
               , scotty >=0.9
               , stm >=2.4.3 && <2.5
               , text >=1.2
               , time >=1.5
               , transformers >=0.4
               , ttrie >=0.1.2
  ghc-options: -threaded
  default-language: Haskell2010

executable social1
  hs-source-dirs: social1, tx
  main-is: Server.hs
  other-modules: SocialDB, TX
  build-depends: base >=4.7
               , aeson >=0.8
               , cereal >=0.4
               , containers >=0.5
               , bytestring >=0.10
               , hashable >= 1.2
               , http-types >=0.8
               , old-locale >=1.0
               , random >=1.1
               , safecopy >=0.8
               , scotty >=0.9
               , stm >=2.4.3 && <2.5
               , text >=1.2
               , time >=1.5
               , transformers >=0.4
               , ttrie >=0.1.2
  ghc-options: -threaded
  default-language: Haskell2010

executable social2
  hs-source-dirs: social2, tx
  main-is: Server.hs
  other-modules: SocialDB, TX
  build-depends: base >=4.7
               , aeson >=0.8
               , cereal >=0.4
               , containers >=0.5
               , bytestring >=0.10
               , hashable >= 1.2
               , http-types >=0.8
               , old-locale >=1.0
               , random >=1.1
               , safecopy >=0.8
               , scotty >=0.9
               , stm >=2.4.3 && <2.5
               , text >=1.2
               , time >=1.5
               , transformers >=0.4
               , ttrie >=0.1.2
  ghc-options: -threaded
  default-language: Haskell2010
