name:                stmfin-examples
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Schröder
maintainer:          mc.schroeder@gmail.com
copyright:           (c) Michael Schröder 2014
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- extra-source-files:

-- ---------------------------------------------------------------------------

executable social1
  hs-source-dirs: social1
  main-is: Server.hs
  other-modules: SocialDB, TX
  build-depends: base ==4.7.*
               , blaze-html ==0.7.*
               , bytestring ==0.10.*
               , containers ==0.5.*
               , scotty ==0.9.*
               , scotty-cookie >=0.1
               , shakespeare ==2.0.*
               , stm >=2.4.3 && <2.5
               , text ==1.2.*
               , time >=1.4 && <1.5
               , transformers ==0.4.*
  ghc-options: -threaded
  default-language: Haskell2010

executable todo1
  main-is:             todo1.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:
  ghc-options:         -threaded
  default-language:    Haskell2010


executable bank-containers
    main-is: bank-containers.hs
    build-depends: base ==4.7.*, async, containers, random, stm, criterion
    ghc-options: -threaded
    default-language: Haskell2010

executable bank-ctrie
    main-is: bank-ctrie.hs
    build-depends: base ==4.7.*, async, ctrie, random, stm, criterion
    ghc-options: -threaded
    default-language: Haskell2010
