name:                stmfin-examples
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Schröder
maintainer:          mc.schroeder@gmail.com
copyright:           (c) Michael Schröder 2014
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: js/*
                  , social1/client.html
                  , social2/client.html

executable social1
  hs-source-dirs: social1, tx1
  main-is: Server.hs
  other-modules: SocialDB, TX
  build-depends: base ==4.7.*
               , aeson >=0.8
               , cereal ==0.4.*
               , containers ==0.5.*
               , bytestring ==0.10.*
               , http-types ==0.8.*
               , old-locale ==1.0.*
               , random ==1.1.*
               , safecopy ==0.8.*
               , scotty ==0.9.*
               , stm >=2.4.3 && <2.5
               , text ==1.2.*
               , time ==1.4.*
               , transformers ==0.4.*
  ghc-options: -threaded
  default-language: Haskell2010

executable social2
  hs-source-dirs: social2, tx1
  main-is: Server.hs
  other-modules: SocialDB, TX
  build-depends: base ==4.7.*
               , aeson >=0.8
               , cereal ==0.4.*
               , containers ==0.5.*
               , bytestring ==0.10.*
               , http-types ==0.8.*
               , old-locale ==1.0.*
               , random ==1.1.*
               , safecopy ==0.8.*
               , scotty ==0.9.*
               , stm >=2.4.3 && <2.5
               , text ==1.2.*
               , time ==1.4.*
               , transformers ==0.4.*
  ghc-options: -threaded
  default-language: Haskell2010
